[metadata]
name = gv-python
version = attr: gv-python.__version__
#description = 
long_description = file: README.md
long_description_content_type = text/markdown
#url = 
author = 
author_email = 
license = Apache-2.0
license_file = LICENSE
platforms = any

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.extras_require]
dev =
  pytest

[options.entry_points]
console_scripts =
    #foo = package_name.module_name:func_name
    #foo_dev = package_name.module_name:func_name [develop]
